Minor fixes, added broadcast
